--- a/public/assets/scss/partials/_extrasmall.scss
+++ b/public/assets/scss/partials/_extrasmall.scss
@@ -831,6 +831,10 @@
     display: block;
   }
 
+  .sv-thankyou-image {
+    margin-bottom: -30px;
+  }
+
 }
 
 // iPhone 6 landscape
